--- a/src/io/SConscript
+++ b/src/io/SConscript
@@ -9,7 +9,6 @@ Import('BuildEnv')
 env = BuildEnv.Clone()
 env.CppDisableExceptions()
 env.Append(CPPPATH = [env['TOP']])
-env.Append(CPPPATH = '#third_party\OpenSSLWin32\include')
 
 SandeshGenFiles = env.SandeshGenCpp('io.sandesh')
 SandeshGenSrcs = env.ExtractCpp(SandeshGenFiles)
@@ -19,13 +18,13 @@ except_env.Append(CPPPATH = env['TOP_INCLUDE'] + '/thrift')
 except_env.Append(CPPPATH = [env['TOP']])
 except_env.Append(CPPPATH = '#third_party\OpenSSLWin32\include')
 
-EventManagerSrc = except_env.Object('event_manager.o', 'event_manager.cc')
-SslServerSrc = except_env.Object('ssl_server.o', 'ssl_server.cc')
+EventManagerSrc = except_env.Object('event_manager', 'event_manager.cc')
+SslServerSrc = except_env.Object('ssl_server', 'ssl_server.cc')
 
 usock_env = BuildEnv.Clone()
 usock_env.CppEnableExceptions()
 usock_env.Append(CPPPATH = env['TOP'])
-usock_server = usock_env.Object('usock_server.o', 'usock_server.cc')
+usock_server = usock_env.Object('usock_server', 'usock_server.cc')
 
 libio = env.Library('io',
             SandeshGenSrcs +
