--- a/src/dns/SConscript
+++ b/src/dns/SConscript
@@ -20,17 +20,15 @@ env.Prepend(CPPPATH = env['TOP'] + '/sandesh/library')
 env.Prepend(CPPPATH = env['TOP'] + '/bgp')
 env.Prepend(CPPPATH = env['TOP'] + '/discovery/client')
 env.Prepend(CPPPATH = env['TOP'] + '/http/client')
-env.Append(CPPPATH = '#third_party\OpenSSLWin32\include')
 
 env.Prepend(LIBS=['ifmap_vnc', 'ifmap_server', 'ifmap_common', 'net', 'ifmapio',
                   'xmpp', 'ds', 'sandeshvns', 'peer_sandesh', 'table_sandesh',
                   'httpc', 'curl', 'process_info',
                   'db', 'io', 'base', 'xml', 'pugixml', 'libxml2',
                   'boost_regex', 'boost_chrono', 'boost_program_options',
-                  'libeay32', 'ssleay32',
-                  'boost_filesystem'])
+                  'libeay32', 'ssleay32'])
 env.Prepend(LIBS=['dns_cfg', 'cmn', 'mgr', 'agent_xmpp', 'bind_interface', 'dns_uve'])
-env.Append(LIBS=['sandesh', 'http', 'http_parser'])
+env.Append(LIBS=['sandesh', 'http', 'http_parser', 'boost_filesystem'])
 
 if sys.platform != 'darwin':
     env.Append(LIBS=['rt'])
