--- a/lib/windowsstubs/SConscript
+++ b/lib/windowsstubs/SConscript
@@ -1,23 +1,12 @@
-import os
-import subprocess
-import sys
-import fnmatch
-
-print 'Enter windowslib'
-
-
-
 env = DefaultEnvironment().Clone()
-env.AppendUnique(CCFLAGS='/DUNICODE')#both are needed by the compiler
-env.AppendUnique(CCFLAGS='/D_UNICODE')
+
+env.AppendUnique(CCFLAGS=['/DUNICODE', '/D_UNICODE']) #both are needed by the compiler
 
 vpath = '#windows/src'
-env.VariantDir('#/' + Dir('.').path + '/src', vpath,0)
-windows_buildpath = Dir('.').abspath + '/src'
+env.VariantDir('#/' + Dir('.').path + '/src', vpath, duplicate=0)
+buildpath = Dir('.').abspath + '/src'
 
-print windows_buildpath
-files = Glob(windows_buildpath +'/*.cc')
-libsources = ['#windows/src/agentconstants.cc','#windows/src/cpuutil.cc','#windows/src/taskutil.cc', '#windows/src/timeutils.cc', '#windows/src/winnw.cc' , '#windows/src/wmi.cc']
+files = Glob(buildpath + '/*.cc') + [buildpath + '/sys/ioctl.cc', buildpath + '/sys/time.cc']
 windowsstubs_lib = env.Library('windowsstubs', files)
 env.Install('#/build/lib/', 'windowsstubs.lib')
 env.Alias('windowsstubs', '#/build/lib/windowsstubs.lib')
