--- a/lib/log4cplus/SConscript
+++ b/lib/log4cplus/SConscript
@@ -11,7 +11,7 @@ env = DefaultEnvironment()
 
 if platform.system() == 'Windows':
     output_lib = File('#/build/lib/log4cplus.lib')
-    output_dll = File('#/build/bin/log4cplus.dll')
+    output_dll = File('#/build/bin/log4cplusD.dll')
 
     def build(target, source, env):
         msbuild = [os.environ['MSBUILD'], 'log4cplus.vcxproj', '/p:PlatformToolset=v140',
