--- a/src/vnsw/agent/test/SConscript
+++ b/src/vnsw/agent/test/SConscript
@@ -38,6 +38,7 @@ elif sys.platform.startswith('linux'):
     platform_dependent = 'linux/test_util_tap.cc'
 elif sys.platform.startswith('win'):
     platform_dependent ='windows/test_util_tap.cc'
+    env.Append(LIBS = ['Iphlpapi'])
 
 test_lib_srcs = ['test_agent_init.cc',
                  'test_init.cc',
